--- a/5.html
+++ b/5.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     
+    <div class="fase5">
+
+        <img class="circle cat" src="FOTO/cat.png" alt="Gato">
+        <img class="circle camel" src="FOTO/camel.png" alt="Camelo">
+        <img class="circle horse" src="FOTO/horse.png" alt="Cavalo">
+    
+    </div>
+
 </body>
 </html>
