--- a/6.html
+++ b/6.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+    <div class="fase6">
+
+        <img class="circle cat" src="FOTO/cat.png" alt="Gato">
+
+    
+    </div>
+
 </body>
 </html>
