--- a/7.html
+++ b/7.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 6 </title>
+    <title>Fase 7 </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div class="fase7">
+
+        <img class="circle cat" src="FOTO/cat.png" alt="Gato">
+        <img class="circle camel" src="FOTO/camel.png" alt="Camelo">
+        <img class="circle horse" src="FOTO/horse.png" alt="Cavalo">
+    
+    </div>
+
 </body>
 </html>
