--- a/18.html
+++ b/18.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 13 </title>
+    <title>Fase 18 </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="fase13">
 
-        <img class="circle cat" src="FOTO/cat.png" alt="Gato">
+    <div class="fase18">
+
         <img class="circle camel" src="FOTO/camel.png" alt="Camelo">
-        <img class="circle horse" src="FOTO/horse.png" alt="Cavalo">
-    
+        <img class="circle cat" src="FOTO/cat.png" alt="gato">
+        <img class="circle cat" src="FOTO/cat.png" alt="gato">
+        <img class="circle cat" src="FOTO/cat.png" alt="gato">
+        <img class="circle cat" src="FOTO/cat.png" alt="gato">
+        <img class="circle cat" src="FOTO/cat.png" alt="gato">
+        <img class="circle horse" src="FOTO/horse.png" alt="cavalo">
+
     </div>
 
 </body>
