--- a/22.html
+++ b/22.html
@@ -3,17 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 13 </title>
+    <title>Fase 22 </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="fase13">
 
-        <img class="circle cat" src="FOTO/cat.png" alt="Gato">
-        <img class="circle camel" src="FOTO/camel.png" alt="Camelo">
-        <img class="circle horse" src="FOTO/horse.png" alt="Cavalo">
-    
+    <div class="fase22">
+
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
+    <img class="circle cat" src="FOTO/cat.png" alt="gato">
     </div>
 
 </body>
