--- a/links.html
+++ b/links.html
@@ -8,5 +8,103 @@
 </head>
 <body>
     
+    <h2>Tarefa FLEXBOX FROGGY</h2>
+
+    <a href="1.html" target="_blank">
+        <button class="botao">FASE 1</button>       
+    </a>
+    <br> <br>
+    <a href="2.html" target="_blank">
+        <button class="botao">FASE 2</button>       
+    </a>
+    <br> <br>
+    <a href="3.html" target="_blank">
+        <button class="botao">FASE 3</button>       
+    </a>
+    <br> <br>
+    <a href="4.html" target="_blank">
+        <button class="botao">FASE 4</button>       
+    </a>
+    <br> <br>
+    <a href="5.html" target="_blank">
+        <button class="botao">FASE 5</button>       
+    </a>
+    <br> <br>
+    <a href="6.html" target="_blank">
+        <button class="botao">FASE 6</button>       
+    </a>
+    <br> <br>
+    <a href="7.html" target="_blank">
+        <button class="botao">FASE 7</button>       
+    </a>
+    <br> <br>
+    <a href="8.html" target="_blank">
+        <button class="botao">FASE 8</button>       
+    </a>
+    <br> <br>
+    <a href="9.html" target="_blank">
+        <button class="botao">FASE 9</button>       
+    </a>
+    <br> <br>
+    <a href="10.html" target="_blank">
+        <button class="botao">FASE 10</button>       
+    </a>
+    <br> <br>
+    <a href="11.html" target="_blank">
+        <button class="botao">FASE 11</button>       
+    </a>
+    <br> <br>
+    <a href="12.html" target="_blank">
+        <button class="botao">FASE 12</button>       
+    </a>
+    <br> <br>
+    <a href="13.html" target="_blank">
+        <button class="botao">FASE 13</button>       
+    </a>
+    <br> <br>
+    <a href="14.html" target="_blank">
+        <button class="botao">FASE 14</button>       
+    </a>
+    <br> <br>
+    <a href="15.html" target="_blank">
+        <button class="botao">FASE 15</button>       
+    </a>
+    <br> <br>
+    <a href="16.html" target="_blank">
+        <button class="botao">FASE 16</button>       
+    </a>
+    <br> <br>
+    <a href="17.html" target="_blank">
+        <button class="botao">FASE 17</button>       
+    </a>
+    <br> <br>
+    <a href="18.html" target="_blank">
+        <button class="botao">FASE 18</button>       
+    </a>
+    <br> <br>
+    <a href="19.html" target="_blank">
+        <button class="botao">FASE 19</button>       
+    </a>
+    <br> <br>
+    <a href="20.html" target="_blank">
+        <button class="botao">FASE 20</button>       
+    </a>
+    <br> <br>
+    <a href="21.html" target="_blank">
+        <button class="botao">FASE 21</button>       
+    </a>
+    <br> <br>
+    <a href="22.html" target="_blank">
+        <button class="botao">FASE 22</button>       
+    </a>
+    <br> <br>
+    <a href="23.html" target="_blank">
+        <button class="botao">FASE 23</button>       
+    </a>
+    <br> <br>
+    <a href="24.html" target="_blank">
+        <button class="botao">FASE 24</button>       
+    </a>
+
 </body>
 </html>
